Ajout du menu + séparation Jquery
Ajout de l'HTML et CSS
Ajout des scripts Jquery dans Ajax.js

--- a/src/main/ressources/static/css/starter-template.css
+++ b/src/main/ressources/static/css/starter-template.css
@@ -2,6 +2,33 @@ body {
   padding-top: 50px;
 }
 .starter-template {
-  padding: 40px 15px;
   text-align: center;
+}
+
+.row {
+	padding: 30px;
+}
+.menu {
+	margin-top:25px;
+}
+/* make sidebar nav vertical */ 
+@media (min-width: 768px) {
+  .sidebar-nav .navbar .navbar-collapse {
+    padding: 0;
+    max-height: none;
+  }
+  .sidebar-nav .navbar ul {
+    float: none;
+  }
+  .sidebar-nav .navbar ul:not {
+    display: block;
+  }
+  .sidebar-nav .navbar li {
+    float: none;
+    display: block;
+  }
+  .sidebar-nav .navbar li a {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
