--- a/src/main/ressources/templates/ListEvol.html
+++ b/src/main/ressources/templates/ListEvol.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="domain/layout" layout:decorator="LayoutDefault">
 		
-		<div class="container" layout:fragment="contenu" style="padding-top: 70px;">
+		<div class="container col-sm-10" layout:fragment="contenu" >
 		
 				<div class="starter-template col-sm-6">
 				<form action="/CompareEvol" method="POST">
@@ -29,7 +29,7 @@
 	
 			
 			<div class="col-sm-6">
-				<h3 id="titlebranche">#####</h3>
+				<h3 id="titlebranche"></h3>
 				<ul id="infoevol">
 				</ul>
 			</div>
