Refactorisation + Ajout de l'affichage de l'historique

--- a/src/main/resources/templates/ListHistorique.html
+++ b/src/main/resources/templates/ListHistorique.html
@@ -10,25 +10,24 @@
 		<br />
 				<br />
 		
-			<table class="tableMerge table">
+			<table class="tableHistorique table">
 				<thead>
 					<tr class="active">
-						<th>Version 1</th>
-						<th>Version 2</th>
+						<th>N° Historique</th>
+						<th>Type de changement</th>
+						<th>N° Merge</th>
+						<th width="250px">Personne</th>
 						<th width="250px">Date</th>
-						<th width="250px">Personne en charge</th>
-						<th width="80px">Fait</th>
-						<th width="180px">Outils</th>
 					</tr>
 				</thead>
-				<tbody id="bodyMerge">
+				<tbody id="bodyHistorique">
 				</tbody>
 			</table>
 	</div>
 
 
 
-	<script src="js/merge.js"></script>
+	<script src="js/historique.js"></script>
 
 </div>
 <!-- /.container -->
