--- a/src/main/resources/templates/ListMerge.html
+++ b/src/main/resources/templates/ListMerge.html
@@ -6,12 +6,11 @@
 	style="padding-top: 0px;">
 	
 	<div class="row col-sm-12">
-		<button type="button" class="btn" id="reloadButton" > RELOAD </button>
-		<button type="button" class="btn btn-primary" id="allButton" > All </button>
+		<button type="button" class="btn btn-primary" id="allButton" > Non Fait </button>
 		<br />
 				<br />
 		
-			<table class="tableMerge table">
+			<table class="tableMerge table" data-mode="">
 				<thead>
 					<tr class="active">
 						<th>Version 1</th>
