--- a/src/main/resources/templates/LayoutDefault.html
+++ b/src/main/resources/templates/LayoutDefault.html
@@ -12,6 +12,7 @@
 		    <title>Starter Template for Bootstrap</title>
 		
 		    <!-- Bootstrap core CSS -->
+		   	<link href="css/main.css" rel="stylesheet"></link>
 		    <link href="bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"></link>
 			<link href="bootstrap-datetimepicker/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"></link>
 		
