--- a/src/main/resources/templates/ListEvol.html
+++ b/src/main/resources/templates/ListEvol.html
@@ -3,7 +3,8 @@
 		
 		<div class="container col-sm-10" layout:fragment="contenu" >
 		
-				<div class="starter-template col-sm-6">
+				<div class="col-sm-6">
+				<a href="/InverseTri"> Cacher les Evolutions non paramétrer</a>
 				<form action="/CompareEvol" method="POST">
 					<table class="table table-responsive">
 					  <thead class="thead-default">
