--- a/src/main/resources/templates/ListHistorique.html
+++ b/src/main/resources/templates/ListHistorique.html
@@ -13,9 +13,9 @@
 			<table class="tableHistorique table">
 				<thead>
 					<tr class="active">
-						<th>N° Historique</th>
+						<th>NÂ° Historique</th>
 						<th>Type de changement</th>
-						<th>N° Merge</th>
+						<th>NÂ° Merge</th>
 						<th width="250px">Personne</th>
 						<th width="250px">Date</th>
 					</tr>
