--- a/src/main/resources/templates/ListPatch.html
+++ b/src/main/resources/templates/ListPatch.html
@@ -6,24 +6,23 @@
 	style="padding-top: 0px;">
 	
 	<div class="row col-sm-12">		
-			<table class="tableHistorique table">
+			<table class="tableData table">
 				<thead>
 					<tr class="active">
-						<th>N° Historique</th>
-						<th>Type de changement</th>
-						<th>N° Merge</th>
-						<th width="250px">Personne</th>
-						<th width="250px">Date</th>
+						<th>Application</th>
+						<th>Nom Patch</th>
+						<th width="170px">Date</th>
+						<th width="250px">Auteur</th>
 					</tr>
 				</thead>
-				<tbody id="bodyHistorique">
+				<tbody id="bodyTable">
 				</tbody>
 			</table>
 	</div>
 
 
 
-	<script src="js/historique.js"></script>
+	<script src="js/PatchBDD.js"></script>
 
 </div>
 <!-- /.container -->
